--- a/File_Download.css
+++ b/File_Download.css
@@ -24,6 +24,7 @@
     border-radius: 5px;
     color: black;
     margin: 0 auto;
+    background-color: #FFF;
   }  
   .file-box:hover {
     background-color: #F9F9F9;
