--- a/File_Download.css
+++ b/File_Download.css
@@ -13,112 +13,125 @@
     src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumSquareNeo/NanumSquareNeoTTF-bRg.eot?#iefix) format("embedded-opentype"), 
          url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumSquareNeo/NanumSquareNeoTTF-bRg.woff) format("woff");
 }
-  .file-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 468px;
-    height: 60px;
-    padding: 10px;
-    border: 1px solid #E9E9E9;
-    border-radius: 5px;
-    color: black;
-    margin: 0 auto;
-    background-color: #FFF;
-  }  
-  .file-box:hover {
-    background-color: #F9F9F9;
-    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
-    text-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
-    color: #CB242A;
-  }
-    
-  .file-box:hover .file-folder-icon i:before {
-    content: "\f07c";
-    margin-right: -4px;
-  }
+.wm-container {
+  font-family: 'NanumSquareNeo', Arial, sans-serif;
+  max-width: auto;
+  margin: 0 auto;
+  padding: 20px;
+  box-sizing: border-box;
+}
 
-  .file-folder-icon {
-    margin-right: 20px; /* 여백 추가 */
-    padding-left: 10px;
-  }
+.wm-title-box {
+  position: relative;
+  top: 20px;
+  font-family: 'MaruBuriExtraLight', sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  height: 50px;
+  margin-bottom: 20px;
+  background-color: #559CEF;
+  padding-left: 20px;
+  font-weight: bold;
+  font-size: 20px;
+  text-shadow: 2px 2px 4px black;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  border-radius: 10px 10px 0px 0px;
+}
 
-  .file-info {
-    text-align: left;
-  }
+.wm-middle-box {
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  height: 130px;
+  padding: 30px 10px 0px 10px;
+  background-color: #FFF;
+}
 
-  .file-size {
-    font-size: 12px;    
-  }
-  .Down-btn {    
-    text-decoration: none;    
-    cursor:pointer;
-  }
+.wm-file-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 468px;
+  height: 50px;
+  padding: 10px;
+  border: 1px solid #E9E9E9;
+  border-radius: 5px;
+  color: black;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  background-color: #FFF;
+  cursor: pointer;
+}
 
-  .file-down-icon {
-    margin-left: auto;
-    padding-right: 10px;
-  }
+.wm-file-box:hover {
+  background-color: #F9F9F9;
+  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
+  text-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
+  color: #CB242A;
+}
 
-    .title-box {
-      position: relative;
-      top: 20px;
-    font-family: 'MaruBuriExtraLight';
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    height: 50px;
-    margin-bottom: 20px;
-    background-color: #559CEF;
-    padding-left: 20px;
-    font-weight: bold;
-    font-size: 20px;
-    text-shadow: 2px 2px 4px black;
-    color:#ffffff;
-    display : flex;
-    align-items : center;
-    border-radius: 10px 10px 0px 0px;
-  }
-  .middle-box {
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    height: 130px;
-    padding: 30px 10px 0px 10px;
-    background-color: #FFF;
-  }
-    .bottom-box {
-    font-family: 'NanumSquareNeo';
-    position: relative;
-    top: -70px;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    height: 100%;
-    margin-bottom: 20px;
-    background-color: #000000;
-    padding: 10px 20px 10px 20px;
-    font-size: 15px;
-    color:#FFE35B;
-    display : flex;
-    align-items : center;
-    border-radius: 0px 0px 10px 10px;
-    line-height: 1.3em;
-  }
-    .info-box {
-    font-family: 'NanumSquareNeo';
-    height: 50px;
-    width: 140px;
-    margin-bottom: 20px;
-    background-color: #000000;
-    padding: 0px 5px 0px 5px;
-    font-size: 17px;
-    font-weight: bold;
-    text-align: center;
-    color:#FF5017;
-    display : flex;
-    justify-content : center;
-    border-radius: 20px 20px 20px 20px;
-    transform:translate(-50%);
-    position: relative; 
-    left:50%; 
-    top: -20px; 
-  }
+.wm-file-box:hover .wm-file-folder-icon i:before {
+  content: "\f07c";
+  margin-right: -4px;
+}
 
+.wm-file-folder-icon {
+  margin-right: 20px;
+  padding-left: 10px;
+}
+
+.wm-file-info {
+  text-align: left;
+}
+
+.wm-file-size {
+  font-size: 12px;
+}
+
+.wm-file-down-icon {
+  margin-left: auto;
+  padding-right: 10px;
+}
+
+.wm-info-box {
+  height: 50px;
+  width: 140px;
+  margin-bottom: 20px;
+  background-color: #000000;
+  padding: 0px 5px;
+  font-size: 17px;
+  font-weight: bold;
+  text-align: center;
+  color: #FF5017;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  transform: translate(-50%);
+  position: relative;
+  left: 50%;
+  top: -20px;  
+}
+
+.wm-info-text {
+  position: absolute;
+  top: 2px; /* 이 값을 조정하여 텍스트 위치를 변경할 수 있습니다 */
+  z-index: 1000;
+}
+
+.wm-bottom-box {
+  position: relative;
+  top: -70px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  margin-bottom: 20px;
+  background-color: #000000;
+  padding: 10px 20px;
+  font-size: 15px;
+  color: #FFE35B;
+  display: flex;
+  align-items: center;
+  border-radius: 0px 0px 10px 10px;
+  line-height: 1.3em;
+}
 /* 파일 다운로드 창 끝 */
 
 /* 링크 창 시작 */
