--- a/File_Download.css
+++ b/File_Download.css
@@ -50,7 +50,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 468px;
-  height: 70px;
+  height: 80px;
   padding: 10px;
   border: 1px solid #E9E9E9;
   border-radius: 5px;
@@ -59,6 +59,7 @@
   margin-bottom: 10px;
   background-color: #FFF;
   cursor: pointer;    
+  font-family: Arial;
   font-size: 13px;
   overflow: hidden; /* 추가: 내용이 넘치지 않도록 설정 */
 }
@@ -181,35 +182,35 @@
 /* 링크 창 끝 */
 
 /* 새 카드 링크 창 시작 */
-        .card-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .card {
-            display: flex;
-            background-color: white;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            margin: 10px;
-            width: calc(100% - 20px);
-            max-width: 1200px;
-            border: 1px solid #D8D8D8;
-        }
-        .card-image {
-            width: 20%;
-            min-width: 100px;
-            max-width: 240px;
-            aspect-ratio: 1 / 1;
-            flex-shrink: 0;
-            background-size: cover;
-            background-position: center;
-            border: 1px solid #D8D8D8;
-        }
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .card {
+    display: flex;
+    background-color: white;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    width: calc(100% - 20px);
+    max-width: 1200px;
+    border: 1px solid #D8D8D8;
+  }
+  .card-image {
+    width: 20%;
+    min-width: 100px;
+    max-width: 240px;
+    aspect-ratio: 1 / 1;
+    flex-shrink: 0;
+    background-size: cover;
+    background-position: center;
+    border: 1px solid #D8D8D8;
+  }
         .card-content {
             padding: 20px;
             display: flex;
