--- a/Card_Link.css
+++ b/Card_Link.css
@@ -29,8 +29,9 @@
     border: 1px solid #D8D8D8;
   }
   .card-content {
-    padding: 20px;
-    display: flex;
+    padding: 20px;    
+    position: relative;
+    top: -15px;
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 1;
